--- a/MobileAudioGuide/MobileAudioGuide/Info.plist
+++ b/MobileAudioGuide/MobileAudioGuide/Info.plist
@@ -29,5 +29,12 @@
 	<string>App need always have access to your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>App need always have access to your location</string>
+	<key>MBXAccessToken</key>
+	<string>pk.eyJ1IjoibjIzNDkyIiwiYSI6ImNsNGNka3o0dDA1cHMzZm53NzFmbTR5cnQifQ.6MrRlX46eo5aR_WQXKwhiQ</string>
+	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
+	<dict>
+		<key>CustomKey</key>
+		<string>We temporarily require your precise location for an optimal experience</string>
+	</dict>
 </dict>
 </plist>
